syntax = "proto3";
import "types.proto";
package bs.list;
option go_package ="/list";

enum CMDList {
	IDRoomNone			= 0;
	IDRoomRegisterReq	= 1;			//房间注册
	IDRoomRegisterRsp	= 2;			//房间注册
	IDRoomListReq		= 3;			//列表请求
	IDRoomListRsp		= 4;			//列表请求
}

message RoomRegisterReq{
	types.RoomInfo					info = 1;
}

message RoomRegisterRsp{
	enum Result {
		SUCCESS = 0;					//成功
	}
	types.ErrorInfo				err_info = 99;
}

//房间列表
message RoomListReq{
	uint32							list_id = 1;
}

//房间列表
message RoomListRsp{
	repeated types.RoomInfo					rooms = 1;
}